Fix horizontal scroll on concert pages

--- a/chelseasymphony/static/chelseasymphony/scss/layout/_concert-page.scss
+++ b/chelseasymphony/static/chelseasymphony/scss/layout/_concert-page.scss
@@ -108,7 +108,6 @@
 			 }
 		  }
 		  .concert-program-piece-soloist {
-				width: 100%;
 				padding-left: 36%;
         :nth-child(2) {
           font-style: italic;
