--- a/chelseasymphony/static/chelseasymphony/scss/styles.scss
+++ b/chelseasymphony/static/chelseasymphony/scss/styles.scss
@@ -24,6 +24,6 @@
 @import 'layout/page-program-notes';
 
 // Debugging
-div {
- // border: dashed blue 1px;
-}
+//* {
+  //border: dashed red 1px !important;
+//}
